--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ nav p{
 
 
 .firstP{
-    left: 20px;
+    left: 100px;
 }
 
 .secondP{
@@ -57,4 +57,8 @@ footer{
     height: 80px;
     border-top: 2px;
     border-color: black;
+}
+
+footer h1{
+    text-align: center;
 }
